--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-cayman
 title: Shawn Hamel
 description: Operations & Strategy Leader
+
+header_pages:
+  - about.md
+  - projects.md
+  - contact.md
