--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,7 @@ header_pages:
   - about.md
   - projects.md
   - contact.md
+
+minima: 
+  social_links: 
+    - {platform: linkedin, user_url: "https://www.linkedin.com/in/shawnhamel}
