--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ header_pages:
 
 minima: 
   social_links: 
-    - {platform: linkedin, user_url: "https://www.linkedin.com/in/shawnhamel}
+    - {platform: linkedin, user_url: "https://www.linkedin.com/in/shawnhamel"}
